--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.8.7",
-    "socket.io": "^1.0.6"
+    "socket.io-client": "^1.0.6"
   }
 }
